// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom id 1`] = `
Object {
  "jobs": Object {
    "publish-frontend-custom": Object {
      "name": "Publish frontend-custom",
      "needs": "react-check-custom",
      "runs-on": "ubuntu-latest",
      "steps": Array [
        Object {
          "uses": "actions/checkout@v2",
        },
        Object {
          "uses": "docker/setup-qemu-action@v3",
        },
        Object {
          "uses": "docker/setup-buildx-action@v3",
        },
        Object {
          "name": "Cache Docker layers",
          "uses": "actions/cache@v4",
          "with": Object {
            "key": "buildx-publish-frontend-custom",
            "path": "/tmp/.buildx-cache",
          },
        },
        Object {
          "uses": "docker/login-action@v3",
          "with": Object {
            "password": "\${{ secrets.DOCKER_PASSWORD }}",
            "username": "\${{ secrets.DOCKER_USERNAME }}",
          },
        },
        Object {
          "name": "Build/Publish",
          "uses": "docker/build-push-action@v6",
          "with": Object {
            "cache-from": "type=local,src=/tmp/.buildx-cache,type=registry,ref=pennlabs/example:latest",
            "cache-to": "type=local,dest=/tmp/.buildx-cache",
            "context": ".",
            "file": "./Dockerfile",
            "push": "\${{ github.ref == 'refs/heads/master' }}",
            "tags": "pennlabs/example:latest,pennlabs/example:\${{ github.sha }}",
          },
        },
      ],
    },
    "react-check-custom": Object {
      "container": Object {
        "image": "node:14",
      },
      "name": "React Check custom",
      "runs-on": "ubuntu-latest",
      "steps": Array [
        Object {
          "uses": "actions/checkout@v2",
        },
        Object {
          "name": "Cache",
          "uses": "actions/cache@v4",
          "with": Object {
            "key": "v0-\${{ hashFiles('./yarn.lock') }}",
            "path": "**/node_modules",
          },
        },
        Object {
          "name": "Install Dependencies",
          "run": "cd .
yarn install --frozen-lockfile",
        },
        Object {
          "name": "Lint",
          "run": "cd .
yarn lint",
        },
        Object {
          "name": "Test",
          "run": "cd .
yarn test",
        },
        Object {
          "name": "Upload Code Coverage",
          "run": "ROOT=$(pwd)
cd .
yarn run codecov -p $ROOT -F frontend",
        },
      ],
    },
  },
  "name": "Workflow",
  "on": "push",
}
`;

exports[`default 1`] = `
Object {
  "jobs": Object {
    "publish-frontend": Object {
      "name": "Publish frontend",
      "needs": "react-check",
      "runs-on": "ubuntu-latest",
      "steps": Array [
        Object {
          "uses": "actions/checkout@v2",
        },
        Object {
          "uses": "docker/setup-qemu-action@v3",
        },
        Object {
          "uses": "docker/setup-buildx-action@v3",
        },
        Object {
          "name": "Cache Docker layers",
          "uses": "actions/cache@v4",
          "with": Object {
            "key": "buildx-publish-frontend",
            "path": "/tmp/.buildx-cache",
          },
        },
        Object {
          "uses": "docker/login-action@v3",
          "with": Object {
            "password": "\${{ secrets.DOCKER_PASSWORD }}",
            "username": "\${{ secrets.DOCKER_USERNAME }}",
          },
        },
        Object {
          "name": "Build/Publish",
          "uses": "docker/build-push-action@v6",
          "with": Object {
            "cache-from": "type=local,src=/tmp/.buildx-cache,type=registry,ref=pennlabs/example:latest",
            "cache-to": "type=local,dest=/tmp/.buildx-cache",
            "context": ".",
            "file": "./Dockerfile",
            "push": "\${{ github.ref == 'refs/heads/master' }}",
            "tags": "pennlabs/example:latest,pennlabs/example:\${{ github.sha }}",
          },
        },
      ],
    },
    "react-check": Object {
      "container": Object {
        "image": "node:14",
      },
      "name": "React Check",
      "runs-on": "ubuntu-latest",
      "steps": Array [
        Object {
          "uses": "actions/checkout@v2",
        },
        Object {
          "name": "Cache",
          "uses": "actions/cache@v4",
          "with": Object {
            "key": "v0-\${{ hashFiles('./yarn.lock') }}",
            "path": "**/node_modules",
          },
        },
        Object {
          "name": "Install Dependencies",
          "run": "cd .
yarn install --frozen-lockfile",
        },
        Object {
          "name": "Lint",
          "run": "cd .
yarn lint",
        },
        Object {
          "name": "Test",
          "run": "cd .
yarn test",
        },
        Object {
          "name": "Upload Code Coverage",
          "run": "ROOT=$(pwd)
cd .
yarn run codecov -p $ROOT -F frontend",
        },
      ],
    },
  },
  "name": "Workflow",
  "on": "push",
}
`;
